test/pointers_test/fail/borrower_not_null_default_contstructor.cpp
#include "marcpawl/pointers/pointers.hpp"

auto fail()
{
    // Compile time failure expected
    return marcpawl::pointers::borrower_not_null<int*>();
}
